@@ -6,12 +6,23 @@ import gaphor.UML as UML
 from gaphor.misc.singleton import Singleton
 
 class DiagramItemFactory(Singleton):
+    """
+    Factory class for creating diagram items.
+    """
     __diagram2uml = { }
 
     def init(self, *args, **kwargs):
 	self.__index = 1
 
     def create (self, diagram, type, subject=None):
+	"""
+	Create a new diagram item. Items should not be created directly, but
+	always through a factory.
+	diagram is the diagram the item should be drawn on.
+	type is the class of diagram item that is to be created
+	subject is an objectal UML object that is to be connected to the
+	new diagram item.
+	"""
 	obj = type()
 	obj.set_property('id', self.__index)
 	obj.set_property('parent', diagram.canvas.root)
@@ -32,14 +43,24 @@ class DiagramItemFactory(Singleton):
     def set_next_id(self, id):
 	"""
 	set_next_id() sets the id to use for the next canvas item that will
-	be created.
+	be created. This functionality should only be used when loading
+	models from disk.
 	"""
 	if id > self.__index:
 	    self.__index = id
 
     def flush(self):
+	"""
+	Reset the factory's state
+	"""
 	self.__index = 1
 
     def register(self, item_class, uml_class):
+	"""
+	Match a diagram item with a UML class. If a new item is to be created
+	and no UML object is provided a new UML object will be created. This
+	is typically used for ModelElement like elements. Relationships can
+	exist without being bound to a UML object.
+	"""
 	gobject.type_register(item_class)
 	DiagramItemFactory.__diagram2uml[item_class] = uml_class
