@@ -1,5 +1,5 @@
 '''
-UseCaseItem diagram item
+PackageItem diagram item
 '''
 # vim:sw=4
 
@@ -7,8 +7,10 @@ from modelelement import ModelElementItem
 import diacanvas
 import pango
 
-class UseCaseItem(ModelElementItem):
+class PackageItem(ModelElementItem):
     __gsignals__ = { 'need_update': 'override' }
+    TAB_X=50
+    TAB_Y=20
     MARGIN_X=60
     MARGIN_Y=30
     FONT='sans bold 10'
@@ -16,34 +18,34 @@ class UseCaseItem(ModelElementItem):
     def __init__(self):
 	ModelElementItem.__init__(self)
 	self.set(height=50, width=100)
-	self.__border = diacanvas.shape.Ellipse()
+	self.__border = diacanvas.shape.Path()
 	self.__border.set_line_width(2.0)
 	self.__name = diacanvas.CanvasText()
 	self.add_construction(self.__name)
 	assert self.__name != None
-	font = pango.FontDescription(UseCaseItem.FONT)
+	font = pango.FontDescription(PackageItem.FONT)
 	self.__name.set(font=font, width=self.width,
 			alignment=pango.ALIGN_CENTER)
 	# Center the text:
 	w, h = self.__name.get_property('layout').get_pixel_size()
-	print 'UseCaseItem:',w,h
-	self.__name.move(0, (self.height - h) / 2)
+	self.__name.move(0, (self.height - h + PackageItem.TAB_Y) / 2)
 	self.__name.set(height=h)
 	# Hack since self.<method> is not GC'ed
-	def on_text_changed(text_item, text, actor):
-	    if text != actor.subject.name:
-		actor.subject.name = text
-		actor.__name_update()
+	def on_text_changed(text_item, text, package):
+	    if text != package.subject.name:
+		package.subject.name = text
+		package.__name_update()
 	self.__name.connect('text_changed', on_text_changed, self)
 	#self.__name.connect('text_changed', self.on_text_changed)
 
     def __name_update (self):
-	'''Center the name text in the usecase.'''
+	'''Center the name text in the package body.'''
 	w, h = self.__name.get_property('layout').get_pixel_size()
-	self.set(min_width=w + UseCaseItem.MARGIN_X,
-		 min_height=h + UseCaseItem.MARGIN_Y)
+	self.set(min_width=w + PackageItem.MARGIN_X,
+		 min_height=h + PackageItem.MARGIN_Y)
 	a = self.__name.get_property('affine')
-	aa = (a[0], a[1], a[2], a[3], a[4], (self.height - h) / 2)
+	aa = (a[0], a[1], a[2], a[3], a[4], \
+		(self.height - h + PackageItem.TAB_Y) / 2)
 	self.__name.set(affine=aa, width=self.width, height=h)
 
     def load(self, store):
@@ -51,16 +53,25 @@ class UseCaseItem(ModelElementItem):
 	self.__name_update()
 
     def do_need_update(self):
+	'''Always request updates for the aggregated items.'''
 	self.__name.request_update()
 
     def on_update(self, affine):
 	ModelElementItem.on_update(self, affine)
-	self.__border.ellipse(center=(self.width / 2, self.height / 2), width=self.width - 0.5, height=self.height - 0.5)
+	O = 0.0
+	H = self.height
+	W = self.width
+	X = PackageItem.TAB_X
+	Y = PackageItem.TAB_Y
+	line = ((X, Y), (X, O), (O, O), (O, H), (W, H), (W, Y), (O, Y))
+	self.__border.line(line)
 	self.__border.request_update()
 	self.update_child(self.__name, affine)
+	b1, b2, b3, b4 = self.get_extents()
+	self.set_extents(b1 - 1, b2 - 1, b3 + 1, b4 + 1)
 
     def on_handle_motion (self, handle, wx, wy, mask):
-	retval  = ModelElementItem.on_handle_motion(self, handle, wx, wy, mask)
+	retval = ModelElementItem.on_handle_motion(self, handle, wx, wy, mask)
 	self.__name_update()
 	return retval
 
