@@ -25,6 +25,7 @@ import command.about
     VIEW_SNAP_TO_GRID,
     ITEM_ADD_ACTOR,
     ITEM_ADD_USECASE,
+    ITEM_ADD_PACKAGE,
     ITEM_ADD_COMMENT,
     ITEM_ADD_COMMENT_LINE,
     ITEM_ADD_GENERALIZATION,
@@ -33,70 +34,10 @@ import command.about
     ITEM_ADD_REALIZATION,
     ITEM_ADD_INCLUDE,
     ITEM_ADD_EXTEND
-] = range(23)
+] = range(24)
 
 class DiagramView:
 
-    def __init__(self, dia):
-	win = gtk.Window()
-	if dia.name == '':
-	    win.set_title ('Unknown')
-	else:
-	    win.set_title (dia.name)
-
-	win.set_default_size (300, 300)
-	
-	view = diacanvas.CanvasView (canvas=dia.canvas)
-
-	vbox = gtk.VBox(homogeneous=gtk.FALSE)
-	win.add (vbox)
-	vbox.show()
-	
-	accelgroup = gtk.AccelGroup()
-	win.add_accel_group(accelgroup)
-
-	item_factory = gtk.ItemFactory(gtk.MenuBar, '<main>', accelgroup)
-	item_factory.create_items(DiagramView.__menu_items, self)
-
-	menubar = item_factory.get_widget('<main>')
-	vbox.pack_start(menubar, gtk.FALSE, gtk.FALSE, 0)
-	menubar.show()
-
-	table = gtk.Table(2,2, gtk.FALSE)
-	table.set_row_spacings (4)
-	table.set_col_spacings (4)
-	vbox.pack_start (table)
-	table.show()
-
-	frame = gtk.Frame()
-	frame.set_shadow_type (gtk.SHADOW_IN)
-	table.attach (frame, 0, 1, 0, 1,
-		      gtk.EXPAND | gtk.FILL | gtk.SHRINK,
-		      gtk.EXPAND | gtk.FILL | gtk.SHRINK)
-	frame.show()
-
-	view.set_scroll_region(0, 0, 600, 450)
-	frame.add (view)
-	view.show()
-	
-	sbar = gtk.VScrollbar (view.get_vadjustment())
-	table.attach (sbar, 1, 2, 0, 1, gtk.FILL,
-		      gtk.EXPAND | gtk.FILL | gtk.SHRINK)
-	sbar.show()
-
-	sbar = gtk.HScrollbar (view.get_hadjustment())
-	table.attach (sbar, 0, 1, 1, 2, gtk.EXPAND | gtk.FILL | gtk.SHRINK,
-		      gtk.FILL)
-	sbar.show()
-
-	win.show()
-	
-	self.window = win
-	self.canvasview = view
-	self.diagram = dia
-	self.save_command = command.loadsave.SaveCommand()
-	self.load_command = command.loadsave.LoadCommand()
-	
     def __menu_item_cb (self, action, widget):
 	view = self.canvasview
 	dia = self.diagram
@@ -163,6 +104,8 @@ class DiagramView:
 	    set_placement_tool (diagram.ActorItem, UML.Actor)
 	elif action == ITEM_ADD_USECASE:
 	    set_placement_tool (diagram.UseCaseItem, UML.UseCase)
+	elif action == ITEM_ADD_PACKAGE:
+	    set_placement_tool (diagram.PackageItem, UML.Package)
 	elif action == ITEM_ADD_COMMENT:
 	    set_placement_tool (diagram.CommentItem, UML.Comment)
 	elif action == ITEM_ADD_COMMENT_LINE:
@@ -204,13 +147,71 @@ class DiagramView:
 	( '/New _Item', None, None, 0, '<Branch>' ),
 	( '/New Item/Actor', None, __menu_item_cb, ITEM_ADD_ACTOR ),
 	( '/New Item/Use Case', None, __menu_item_cb,  ITEM_ADD_USECASE ),
+	( '/New Item/Package', None, __menu_item_cb,  ITEM_ADD_PACKAGE ),
 	( '/New Item/Comment', None, __menu_item_cb,  ITEM_ADD_COMMENT ),
 	( '/New Item/Comment Line', None, __menu_item_cb,  ITEM_ADD_COMMENT_LINE ),
 	( '/New Item/Generalization', None, __menu_item_cb,  ITEM_ADD_GENERALIZATION ),
 	( '/New Item/Association', None, __menu_item_cb,  ITEM_ADD_ASSOCIATION ),
-	( '/New Item/Dependency', None, __menu_item_cb,  ITEM_ADD_DEPENDENCY ),
+	( '/New Item/Dependency', None, __menu_item_cb,  ITEM_ADD_DEPENDENCY )
 #	( '/New Item/Realization', None, __menu_item_cb,  ITEM_ADD_REALIZATION ),
 #	( '/New Item/Include', None, __menu_item_cb,  ITEM_ADD_INCLUDE ),
 #	( '/New Item/Extend', None, __menu_item_cb,  ITEM_ADD_EXTEND )
     )
 
+    def __init__(self, dia):
+	win = gtk.Window()
+	if dia.name == '':
+	    win.set_title ('Unknown')
+	else:
+	    win.set_title (dia.name)
+
+	win.set_default_size (300, 300)
+	
+	view = diacanvas.CanvasView (canvas=dia.canvas)
+
+	vbox = gtk.VBox(homogeneous=gtk.FALSE)
+	win.add (vbox)
+	
+	accelgroup = gtk.AccelGroup()
+	win.add_accel_group(accelgroup)
+
+	item_factory = gtk.ItemFactory(gtk.MenuBar, '<main>', accelgroup)
+	
+	item_factory.create_items(DiagramView.__menu_items, self)
+	print 'item_factory:', item_factory.get_item('/File'), len(DiagramView.__menu_items)
+
+	menubar = item_factory.get_widget('<main>')
+	print 'item_factory:', menubar
+	vbox.pack_start(menubar, gtk.FALSE, gtk.FALSE, 0)
+
+	table = gtk.Table(2,2, gtk.FALSE)
+	table.set_row_spacings (4)
+	table.set_col_spacings (4)
+	vbox.pack_end (table)
+
+	frame = gtk.Frame()
+	frame.set_shadow_type (gtk.SHADOW_IN)
+	table.attach (frame, 0, 1, 0, 1,
+		      gtk.EXPAND | gtk.FILL | gtk.SHRINK,
+		      gtk.EXPAND | gtk.FILL | gtk.SHRINK)
+
+	view.set_scroll_region(0, 0, 600, 450)
+	frame.add (view)
+	
+	sbar = gtk.VScrollbar (view.get_vadjustment())
+	table.attach (sbar, 1, 2, 0, 1, gtk.FILL,
+		      gtk.EXPAND | gtk.FILL | gtk.SHRINK)
+
+	sbar = gtk.HScrollbar (view.get_hadjustment())
+	table.attach (sbar, 0, 1, 1, 2, gtk.EXPAND | gtk.FILL | gtk.SHRINK,
+		      gtk.FILL)
+
+	win.show_all()
+	
+	self.window = win
+	self.canvasview = view
+	self.diagram = dia
+	self.item_factory = item_factory
+	self.save_command = command.loadsave.SaveCommand()
+	self.load_command = command.loadsave.LoadCommand()
+	
