@@ -1,3 +1,10 @@
+2002-08-20  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/diagram/*: Added association and package item
+	* Added several comments.
+	* gaphor/misc/storage_minidom.py: works again
+	* configure.in: Gaphor needs DiaCanvas2 0.8.0 (= current CVS version)
+
 2002-07-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/tree: Directory removed, namespace.py is moved to gaphor/ui.
